Fix Collapse links in Option-set #1684

--- a/src/main/resources/assets/admin/common/styles/api/form/set/form-set-view.less
+++ b/src/main/resources/assets/admin/common/styles/api/form/set/form-set-view.less
@@ -15,10 +15,6 @@
     .form-item-set-occurrence-view.invalid.collapsed {
       padding: 10px;
     }
-
-    .form-option-set-occurrence-view.invalid.collapsed {
-      padding: 7px;
-    }
   }
 
   .form-item-set-view,
