--- a/src/main/resources/assets/admin/common/styles/api/form/set/optionset/form-option-set-view.less
+++ b/src/main/resources/assets/admin/common/styles/api/form/set/optionset/form-option-set-view.less
@@ -234,7 +234,7 @@
     &.single-selection {
       .form-option-set-occurrences-container {
         &.empty {
-          display: none;
+          display: none !important;
         }
 
         .form-option-set-option-view {
